# linear_algebra_rust

./: Cargo.toml  README.md  cusolver_common.rs
.devcontainer/: devcontainer.json
cusolver-sys/: Cargo.toml
cusolver-sys/src/: cusolverDn.rs  cusolverMg.rs  cusolverRf.rs  cusolverSp.rs  lib.rs
examples/: array_add.rs  array_lapack.rs  array_mul.rs  array_operations.rs  array_solver1.rs  complex.rs  concat.rs  lpk.rs  lu.rs  matrix_mul.rs  rayon.rs  refops.rs  slice.rs
src/: array.rs  array_blas.rs  basic_trait.rs  basic_traits.rs  blas_ffi.rs  complex.rs  complex_ffi.rs  cublas_const_matrix_ffi.rs  cublas_ffi.rs  cuda_ffi.rs  cusolver_ffi.rs  dist_array.rs  gpu.rs  lapack_ffi.rs  lib.rs  main.rs  matrix.rs  operators.rs  solver.rs  vector.rs  vmatrix.rs
src/basic_traits/: one.rs  scale.rs  transpose.rs
src/operators/: add.rs  cat.rs  det.rs  mul.rs  mutation.rs  sub.rs
