[package]
name = "linear_algebra"
version = "0.1.0"
edition = "2021"

[workspace]

members = [
    "cusolver-sys",
]

[features]
# Defines a feature named `webp` that does not enable any other features.
#cuda = ["cublas-sys"]
cuda = ["cublas-sys", "cuda-runtime-sys", "cusolver-sys"]
# EXPERIMENTAL: 
blas = ["blas-sys", "openblas-src"]

[dependencies]
rand = "0.8.5"
bytemuck = {version="1.4.1", featuers="derive"}
#cublas = { version = "0.2.0", optional =true }
#cuda-sys = { version = "0.2.0", optional =true }
#cuda-driver-sys = { version = "0.3.0", optional =true }
cuda-runtime-sys = {version="0.3.0-alpha.1", optional=true}
cublas-sys = { version = "0.1.0", optional =true }
blas-sys = {version="0.7.1", optional=true}
openblas-src = {version="0.10.8", optional=true}
cusolver-sys = { path = "cusolver-sys", optional=true }
#lapack-src = "0.8.0"
