[package]
name = "linear_algebra"
version = "0.1.0"
edition = "2021"

[workspace]

members = [
    "cusolver-sys",
]

[features]
# EXPERIMENTAL: 
cuda = ["cublas-sys", "cuda-runtime-sys", "cusolver-sys"]
# EXPERIMENTAL: 
blas = ["blas-sys", "openblas-src", "lapack-sys", "lapack-src"]

[dependencies]
num-traits = "0.2"
rand = "0.8.5"
bytemuck = {version="1.4.1", featuers="derive"}
#cublas = { version = "0.2.0", optional =true }
#cuda-sys = { version = "0.2.0", optional =true }
#cuda-driver-sys = { version = "0.3.0", optional =true }
cuda-runtime-sys = {version="0.3.0-alpha.1", optional=true}
cublas-sys = { version = "0.1.0", optional =true }
blas-sys = {version="0.7.1", optional=true}
openblas-src = {version="0.10.8", optional=true}
cusolver-sys = { path = "cusolver-sys", optional=true }
# https://docs.rs/lapack-src/0.8.0/lapack_src/
lapack-src = {version="0.8.0", features = ["openblas"], optional=true}
lapack-sys = {version="0.14.0",optional=true}
rayon = "1.7.0"
itertools = "0.10.5"
